refactor(server,web): api, auth reimagined